updated responsive nav, with js

--- a/Pages/Home/Desktop/index.html
+++ b/Pages/Home/Desktop/index.html
@@ -14,15 +14,30 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="#"><img src="C:\Users\Dom\Desktop\GitHub\Wow Services Site\WOW-site\Logos\wow-logo-nav.png" alt="logo"></a>
+            <a href="#"><img src="https://github.com/DomH85/WOW-site/blob/main/Logos/wow-logo-nav.png?raw=true" alt="logo"></a>
         </div>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+        <ul class="nav-links">
+            <li>
+                <a href="#">Home</a>
+            </li>
+            <li>
+                <a href="#">About</a>
+            </li>
+            <li>
+                <a href="#">Services</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+            </li>
         </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
     </nav>
+
+    <script src="nav.js"></script>
 
 </body>
 </html>
