--- a/Pages/index.html
+++ b/Pages/index.html
@@ -60,17 +60,71 @@
 
         </section>
 
-        <section class="spec-clean">
+        <section id="spec-clean">
 
-            <div >
+            <div class="intro-container">
+                <div class="intro-head">
+                    <h2>
+                        Specialist Cleaners Manchester
+                    </h2>
+                </div>
 
+                <div class="intro-text">
+                    <p>
+                        We provide expert cleaning services that is fast and friendly throughout Manchester, we clean both domestic and commercial properties. All of our cleaners are professionally trained and take great pride in their work, our prices are fair and affordable. If you are looking for a regular cleaner in Manchester then get in touch with our friendly team and they will make sure your property will always look its best.
+                    </p>
+                </div>
 
             </div>
 
-
         </section>
 
+        <section id="why-wow">
 
+            <div class="why-head">
+                <h2>
+                    Why Wow Services
+                </h2>
+            </div>
+
+            <div class="row-container">
+                <div class="hm-row-1">
+                    <div class="column" style="background-color:#aaa;">
+                    <img src="" alt="wow-icon"> 
+                    <h2>Column 1</h2>
+                    <p>Some text..</p>
+                    </div>
+                    <div class="column" style="background-color:#bbb;">
+                    <img src="" alt="wow-icon">
+                    <h2>Column 2</h2>
+                    <p>Some text..</p>
+                    </div>
+                    <div class="column" style="background-color:#ccc;">
+                    <img src="" alt="wow-icon">
+                    <h2>Column 3</h2>
+                    <p>Some text..</p>
+                    </div>
+                </div>
+
+                <div class="hm-row-2">
+                    <div class="column" style="background-color:#aaa;">
+                    <img src="" alt="wow-icon">
+                    <h2>Column 1</h2>
+                    <p>Some text..</p>
+                    </div>
+                    <div class="column" style="background-color:#bbb;">
+                    <img src="" alt="wow-icon">
+                    <h2>Column 2</h2>
+                    <p>Some text..</p>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+        </section>
 
 
 
