home page updates

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -90,32 +90,42 @@
             <div class="row-container">
                 <div class="hm-row-1">
                     <div class="column" style="background-color:#aaa;">
-                    <img src="" alt="wow-icon"> 
-                    <h2>Column 1</h2>
-                    <p>Some text..</p>
+                        <img src="https://github.com/DomH85/WOW-site/blob/main/Pages/Home%20Images/Desktop/Expertise%20Icon.png?raw=true" alt="wow-icon"> 
+                        <h2>Expertise</h2>
+                        <p>
+                            We pride ourselves on helping our clients to smoothly, safely and confidently overcome their biggest challenges that they may have to face.
+                        </p>
                     </div>
                     <div class="column" style="background-color:#bbb;">
-                    <img src="" alt="wow-icon">
-                    <h2>Column 2</h2>
-                    <p>Some text..</p>
+                        <img src="https://github.com/DomH85/WOW-site/blob/main/Pages/Home%20Images/Desktop/Technology%20Icon.png?raw=true" alt="wow-icon">
+                        <h2>Technology</h2>
+                        <p>
+                            We use the most advanced equipment, materials and techniques, that are supported by the latest digital systems, so our clients get a seamless and effective service.
+                        </p>
                     </div>
                     <div class="column" style="background-color:#ccc;">
-                    <img src="" alt="wow-icon">
-                    <h2>Column 3</h2>
-                    <p>Some text..</p>
+                        <img src="https://github.com/DomH85/WOW-site/blob/main/Pages/Home%20Images/Desktop/Dedication%20Icon.png?raw=true" alt="wow-icon">
+                        <h2>Dedication</h2>
+                        <p>
+                            We’re known for our can-do attitude and determination. Where others may fail, we deliver and we take pride in achieving excellent results for our clients. Quickly & effectively and always safely.
+                        </p>
                     </div>
                 </div>
 
                 <div class="hm-row-2">
                     <div class="column" style="background-color:#aaa;">
-                    <img src="" alt="wow-icon">
-                    <h2>Column 1</h2>
-                    <p>Some text..</p>
+                        <img src="https://github.com/DomH85/WOW-site/blob/main/Pages/Home%20Images/Desktop/Speed%20Icon.png?raw=true" alt="wow-icon">
+                        <h2>Speed</h2>
+                        <p>
+                            You can depend on Wow Services to get the job done as quickly and to the highest standard possible, our operatives are there where and when they are needed, every time.
+                        </p>
                     </div>
                     <div class="column" style="background-color:#bbb;">
-                    <img src="" alt="wow-icon">
-                    <h2>Column 2</h2>
-                    <p>Some text..</p>
+                        <img src="https://github.com/DomH85/WOW-site/blob/main/Pages/Home%20Images/Desktop/Safety%20Icon.png?raw=true" alt="wow-icon">
+                        <h2>Safety</h2>
+                        <p>
+                            The safety of our teams, our clients and the wider public is our most paramount concern. Our work is underpinned by industry-leading training and quality standards so we always deliver trusted and dependable service.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -126,6 +136,30 @@
 
         </section>
 
+        <section id="section-3">
+
+            <div class="sect3-container">
+
+            </div>
+
+            <div class="sect3-img">
+            
+            </div>
+
+            <div class="sect3-head">
+
+
+            </div>
+
+            <div class="sect3-text">
+
+            </div>
+
+
+
+
+
+        </section>
 
 
     </main>
