--- a/Pages/index.html
+++ b/Pages/index.html
@@ -147,12 +147,19 @@
             </div>
 
             <div class="sect3-head">
-
-
+                <h2>
+                    Specialist Cleaners Manchester
+                </h2>
             </div>
 
             <div class="sect3-text">
+                <p>
+                    We provide expert cleaning services that is fast and friendly throughout Manchester, we clean both domestic and commercial properties. All of our cleaners are professionally trained and take great pride in their work, our prices are fair and affordable. If you are looking for a regular cleaner in Manchester then get in touch with our friendly team and they will make sure your property will always look its best.
 
+                    We provide expert cleaning services that is fast and friendly throughout Manchester, we clean both domestic and commercial properties. All of our cleaners are professionally trained and take great pride in their work, our prices are fair and affordable. If you are looking for a regular cleaner in Manchester then get in touch with our friendly team and they will make sure your property will always look its best.
+                    
+                    We provide expert cleaning services that is fast and friendly throughout Manchester, we clean both domestic and commercial properties. All of our cleaners are professionally trained and take great pride in their work, our prices are fair and affordable. If you are looking for a regular cleaner in Manchester then get in touch with our friendly team and they will make sure your property will always look its best. 
+                </p>
             </div>
 
 
