--- a/Pages/index.html
+++ b/Pages/index.html
@@ -79,16 +79,17 @@
 
         </section>
 
-        <section id="why-wow">
+        <div class="why-head">
+            <h2>
+                Why Wow Services
+            </h2>
+        </div>
 
-            <div class="why-head">
-                <h2>
-                    Why Wow Services
-                </h2>
-            </div>
+        <section id="why-wow">            
 
             <div class="row-container">
                 <div class="hm-row-1">
+
                     <div class="column" style="background-color:#aaa;">
                         <img src="https://github.com/DomH85/WOW-site/blob/main/Pages/Home%20Images/Desktop/Expertise%20Icon.png?raw=true" alt="wow-icon"> 
                         <h2>Expertise</h2>
@@ -96,6 +97,7 @@
                             We pride ourselves on helping our clients to smoothly, safely and confidently overcome their biggest challenges that they may have to face.
                         </p>
                     </div>
+
                     <div class="column" style="background-color:#bbb;">
                         <img src="https://github.com/DomH85/WOW-site/blob/main/Pages/Home%20Images/Desktop/Technology%20Icon.png?raw=true" alt="wow-icon">
                         <h2>Technology</h2>
@@ -103,6 +105,7 @@
                             We use the most advanced equipment, materials and techniques, that are supported by the latest digital systems, so our clients get a seamless and effective service.
                         </p>
                     </div>
+
                     <div class="column" style="background-color:#ccc;">
                         <img src="https://github.com/DomH85/WOW-site/blob/main/Pages/Home%20Images/Desktop/Dedication%20Icon.png?raw=true" alt="wow-icon">
                         <h2>Dedication</h2>
@@ -113,14 +116,16 @@
                 </div>
 
                 <div class="hm-row-2">
-                    <div class="column" style="background-color:#aaa;">
+
+                    <div class="column2" style="background-color:#aaa;">
                         <img src="https://github.com/DomH85/WOW-site/blob/main/Pages/Home%20Images/Desktop/Speed%20Icon.png?raw=true" alt="wow-icon">
                         <h2>Speed</h2>
                         <p>
                             You can depend on Wow Services to get the job done as quickly and to the highest standard possible, our operatives are there where and when they are needed, every time.
                         </p>
                     </div>
-                    <div class="column" style="background-color:#bbb;">
+
+                    <div class="column2" style="background-color:#bbb;">
                         <img src="https://github.com/DomH85/WOW-site/blob/main/Pages/Home%20Images/Desktop/Safety%20Icon.png?raw=true" alt="wow-icon">
                         <h2>Safety</h2>
                         <p>
@@ -130,29 +135,11 @@
                 </div>
             </div>
 
-
-
-
-
         </section>
 
-        <section id="section-3">
-
-            <div class="sect3-container">
-
-            </div>
-
-            <div class="sect3-img">
-            
-            </div>
-
-            <div class="sect3-head">
-                <h2>
-                    Specialist Cleaners Manchester
-                </h2>
-            </div>
-
-            <div class="sect3-text">
+        <section>
+            <div>
+                <h2>Specialist Cleaners Manchester</h2>
                 <p>
                     We provide expert cleaning services that is fast and friendly throughout Manchester, we clean both domestic and commercial properties. All of our cleaners are professionally trained and take great pride in their work, our prices are fair and affordable. If you are looking for a regular cleaner in Manchester then get in touch with our friendly team and they will make sure your property will always look its best.
 
@@ -162,12 +149,7 @@
                 </p>
             </div>
 
-
-
-
-
         </section>
-
 
     </main>
     
