added about page images

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -14,3 +14,54 @@
 </head>
 
 
+<body>
+    <header> 
+        <nav>
+             <div class="logo">
+                <a href="#"><img src="https://github.com/DomH85/WOW-site/blob/main/Logos/wow-logo-nav.png?raw=true" alt="wow-logo"></a>
+             </div>
+             <ul class="nav-links">
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Services</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+        </nav>
+ 
+        <script src="nav.js"></script>
+     </header>
+ 
+    <main>
+
+        <section id="hero" style="background-image: url('https://github.com/DomH85/WOW-site/blob/main/Pages/Home%20Images/Desktop/home-hero-bg-1920.jpg?raw=true');">
+
+            <div class="hero-container">
+                <div class="hero-header">
+                    <div class="hero-text">
+                        <h1>A CLEAN & FRESH APPROACH
+                            TO COMMERCIAL CLEANING</h1>  
+                    </div>
+                </div>        
+                    <div class="hero-cta">
+                        <button class="more-btn">Find Out More!</button> 
+                    </div>                
+            </div>   
+
+        </section>
+
+
+
+     </main>
